--- a/index.html
+++ b/index.html
@@ -15,28 +15,31 @@
   <!-- From here starts form with the ingredients -->
 
   <form>
-  <input type="checkbox" id="box-ingredient1" name="box-ingredient1" value="4">
+  <input type="checkbox" id="box-ingredient1" class="sum-check" name="box-ingredient1" value="4">
   <label for="box-ingredient1">add</label>
 
-  <input type="checkbox" id="box-ingredient2" name="box-ingredient2" value="4">
+  <input type="checkbox" id="box-ingredient2" class="sum-check" name="box-ingredient2" value="4">
   <label for="box-ingredient2">add</label>
 
-  <input type="checkbox" id="box-ingredient3" name="box-ingredient3" value="4">
+  <input type="checkbox" id="box-ingredient3"class="sum-check" name="box-ingredient3" value="4">
   <label for="box-ingredient3">add</label>
 
-  <input type="checkbox" id="box-ingredient4" name="box-ingredient4" value="4">
+  <input type="checkbox" id="box-ingredient4" class="sum-check" name="box-ingredient4" value="4">
   <label for="box-ingredient4">add</label>
 
-  <input type="checkbox" id="box-ingredient5" name="box-ingredient5" value="4">
+  <input type="checkbox" id="box-ingredient5" class="sum-check" name="box-ingredient5" value="4">
   <label for="box-ingredient5">add</label>
 
-  <input type="checkbox" id="box-ingredient6" name="box-ingredient6" value="4">
+  <input type="checkbox" id="box-ingredient6" class="sum-check" name="box-ingredient6" value="4">
   <label for="box-ingredient6">add</label>
 
   </form>
 
   <!-- Btn calculate -->
-  <button id="create-prices">calculate</button>
+
+  <button class="create-prices-btn">calculate</button>
+  <div id="total-price"></div>
+
     <script type="text/javascript" src="./js/script.js"></script>
     
 </body>
