--- a/index.html
+++ b/index.html
@@ -8,39 +8,52 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  
-  <h1>PERIZAT</h1>
-  <h2>Ingredients</h2>
+    <div class="crucial-container"> 
+       <header>
 
+       </header>
+
+       <div>
+        <h1>NAME YOUR BURGER</h1>
+        <h2>Ingredients</h2> 
+       </div>
+       
   <!-- From here starts form with the ingredients -->
+   <main>
+      <form>
 
-  <form>
-  <input type="checkbox" id="box-ingredient1" class="sum-check" name="box-ingredient1" value="4">
-  <label for="box-ingredient1">add</label>
+         <input type="checkbox" id="box-ingredient1" class="sum-check" name="box-ingredient1" value="4">
+         <label for="box-ingredient1">add</label>
 
-  <input type="checkbox" id="box-ingredient2" class="sum-check" name="box-ingredient2" value="4">
-  <label for="box-ingredient2">add</label>
+         <input type="checkbox" id="box-ingredient2" class="sum-check" name="box-ingredient2" value="4">
+         <label for="box-ingredient2">add</label>
 
-  <input type="checkbox" id="box-ingredient3"class="sum-check" name="box-ingredient3" value="4">
-  <label for="box-ingredient3">add</label>
+         <input type="checkbox" id="box-ingredient3"class="sum-check" name="box-ingredient3" value="4">
+         <label for="box-ingredient3">add</label>
 
-  <input type="checkbox" id="box-ingredient4" class="sum-check" name="box-ingredient4" value="4">
-  <label for="box-ingredient4">add</label>
+          <input type="checkbox" id="box-ingredient4" class="sum-check" name="box-ingredient4" value="4">
+         <label for="box-ingredient4">add</label>
 
-  <input type="checkbox" id="box-ingredient5" class="sum-check" name="box-ingredient5" value="4">
-  <label for="box-ingredient5">add</label>
+         <input type="checkbox" id="box-ingredient5" class="sum-check" name="box-ingredient5" value="4">
+         <label for="box-ingredient5">add</label>
 
-  <input type="checkbox" id="box-ingredient6" class="sum-check" name="box-ingredient6" value="4">
-  <label for="box-ingredient6">add</label>
+         <input type="checkbox" id="box-ingredient6" class="sum-check" name="box-ingredient6" value="4">
+         <label for="box-ingredient6">add</label>
 
-  </form>
+    </form>
 
-  <!-- Btn calculate -->
+     <!-- Btn calculate  and Discount Coupon-->
+    <div>
+        Discount Coupon
+        <input type="text" id="dis-coupon">
+    </div>
+     <button class="create-prices-btn">calculate</button>
+     <div id="total-price"></div>
 
-  <button class="create-prices-btn">calculate</button>
-  <div id="total-price"></div>
+</main>
 
     <script type="text/javascript" src="./js/script.js"></script>
+   </div>
     
 </body>
 </html>
