--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     <div>
         Discount Coupon
         <input type="text" id="dis-coupon">
+        <label for="dis-coupon"></label>
     </div>
      <!-- <button class="create-prices-btn">calculate</button> -->
      <button type="button" class="btn  btn-warning btn-lg create-prices-btn"> <strong>calculate</strong>  </button>
